DDW-430 - Smart tooltips - fixing scrollbar

--- a/source/renderer/app/components/news/NewsFeed.scss
+++ b/source/renderer/app/components/news/NewsFeed.scss
@@ -107,12 +107,12 @@
     }
 
     *::-webkit-scrollbar-track {
-      margin: -7px 0;
+      margin: 24px 0;
     }
 
     &.hasShadow {
       *::-webkit-scrollbar-track {
-        margin: 8px 0 11px;
+        margin: 11px 0;
       }
     }
 
